--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
-    <title>Главная — СТС Summit</title>
+    <title>Впервые во Фрайбурге саммит по маркетингу для русскоговорящих — 17-18 октября 2025</title>
 </head>
 <body>
     <nav>
@@ -12,7 +12,7 @@
         <a href="/contacts">Контакты</a>
     </nav>
     <hr>
-    <h1>Добро пожаловать на сайт СТС Summit!</h1>
-    <p>Основная информация о саммите.</p>
+    <h1>Добро пожаловать на Саммит Трех Стран!</h1>
+    <p>Бизнес Блогеры Бренды </p>
 </body>
 </html>
