--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -12,6 +12,8 @@
         }
         nav a {
             margin-right: 10px;
+            text-decoration: none;
+            color: #000;
         }
         ul.social {
             list-style: none;
