--- a/templates/partners.html
+++ b/templates/partners.html
@@ -3,7 +3,7 @@
     <h3>🎖️ Премиум партнёр</h3>
 
     <!-- Логотип ресторана -->
-    <img src="{{ url_for('static', filename='drei_koeniglichen_logo.png') }}" alt="Die drei Königlichen Logo" style="max-width: 200px; margin-bottom: 20px;">
+    <img src="{{ url_for('static', filename='drei_koeniglichen_logo.jpg') }}" alt="Die drei Königlichen Logo" style="max-width: 200px; margin-bottom: 20px;">
 
     <p><strong>Die drei Königlichen</strong><br>
     Karl-Friedrich-Straße 29, Emmendingen</p>
