--- a/templates/partners.html
+++ b/templates/partners.html
@@ -8,10 +8,11 @@
   <style>
     #partners {
       padding: 50px 20px;
-      background: linear-gradient(135deg, #0a0a0a, #1a1a1a); /* Новый чёрный градиент */
-      color: #fff;
-      text-align: center;
-      font-family: 'Arial', sans-serif;
+  background: radial-gradient(circle at center, #000000 0%, #0c1d40 60%, #007BFF 100%);
+  color: #fff;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+      
     }
 
     #partners h2 {
