--- a/templates/partners.html
+++ b/templates/partners.html
@@ -149,7 +149,7 @@
 
 <p style="text-align: center; font-weight: bold;">
   Хотите стать нашим партнёром? Пишите нам:  
-  <a href="mailto:juliarekling@gmail.com" style="color: #66ccff;">juliarekling@gmail.com</a>
+  <a href="mailto:juliarekling@gmail.com" style="color: #66ccff;">ctcsummit.event@gmail.com</a>
 </p>
 
   </section>
