--- a/templates/partners.html
+++ b/templates/partners.html
@@ -120,7 +120,7 @@
 
     <!-- VISUAL PARTNER -->
     <div class="partner-card">
-      <h3>🎨 Visual Visual Partner</h3>
+      <h3>🎨 Visual Partner</h3>
 
       <img src="{{ url_for('static', filename='logo designer.png') }}" 
            alt="Morning Ermine Logo" class="designer-logo"
