--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
@@ -74,6 +74,7 @@
         <a href="/">Главная</a>
         <a href="/speakers">Спикеры</a>
         <a href="/partners">Партнёры</a>
+        <a href="/faq">FAQ</a>
         <a href="/contacts">Контакты</a>
     </nav>
 
@@ -88,6 +89,7 @@
     <div class="buttons">
         <a href="/speakers">Узнать о спикерах</a>
         <a href="/partners">Наши партнёры</a>
+        <a href="/faq">FAQ</a>
         <a href="/contacts">Контакты</a>
     </div>
 
